--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.2+3
   flutter_polyline_points: ^0.2.4
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   flutter_test:
